# samui

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
.claude/rules/: python-standards.md  software-engineering-principles.md
.cwf/01-sam3ui/: 01-sam3ui-mockup.html
.cwf/02-segmentation-modes/: 02-segmentation-modes-tasklist.md
.cwf/04-point-mode/: 04-point-mode-mockup.html  04-point-mode-plan.md  04-point-mode-tasklist.md
.cwf/05-backend-refactor/: 05-backend-refactor-plan.md  05-backend-refactor-tasklist.md
.cwf/draft/: batch-processing-refactor.md  draft-multi-user.md
docs/exploration/: cvat-sam.md  encoding-inference-split.md
plans/: 00-plan-draft.md  03-job-processing-plan.md  03-job-processing-tasklist.md  draft-job-processing.md  sam3ui-plan.md  sam3ui-tasklist.md  segmentation-modes-plan.md  segmentation-modes-tasklist.md  ui-analysis.md
scripts/: test_sam3_inference.py
tests/: __init__.py  conftest.py  test_api_annotations.py  test_api_images.py  test_api_jobs.py  test_api_point_annotations.py  test_api_processing.py  test_coco_export.py  test_job_processor.py  test_sam3_inference.py
