[project]
name = "samui"
version = "0.1.0"
description = "SAM3 Web UI for image segmentation"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/samui-backend", "packages/samui-frontend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8",
    "httpx>=0.28",
    "pillow>=11.0",
]

[tool.uv.sources]
samui-backend = { workspace = true }
samui-frontend = { workspace = true }
