[project]
name = "samui"
version = "0.1.0"
description = "SAM3 Web UI for image segmentation"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "httpx>=0.28",
    "pillow>=11.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    # Code complexity rules
    "C901",   # mccabe: complex-structure (cyclomatic complexity)
    "PLR0904",# pylint: too-many-public-methods
    "PLR0911",# pylint: too-many-return-statements
    "PLR0912",# pylint: too-many-branches
    "PLR0913",# pylint: too-many-arguments
    "PLR0914",# pylint: too-many-locals
    "PLR0915",# pylint: too-many-statements
    "PLR0916",# pylint: too-many-boolean-expressions
    "PLR1702",# pylint: too-many-nested-blocks
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused imports in __init__.py

[tool.ruff.lint.pylint]
max-args = 7  # Allow up to 7 arguments in function definitions

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "node_modules",
    "build",
    "dist",
]
targets = ["."]
skips = [
    "B101",  # assert_used - acceptable in test code and type guards
]
